caching javap result